[gd_scene load_steps=147 format=2]

[ext_resource path="res://cave/gas_trap/gas.gd" type="Script" id=1]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_000.png" type="Texture" id=2]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_001.png" type="Texture" id=3]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_002.png" type="Texture" id=4]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_003.png" type="Texture" id=5]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_004.png" type="Texture" id=6]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_005.png" type="Texture" id=7]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_006.png" type="Texture" id=8]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_007.png" type="Texture" id=9]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_008.png" type="Texture" id=10]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_009.png" type="Texture" id=11]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_010.png" type="Texture" id=12]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_011.png" type="Texture" id=13]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_012.png" type="Texture" id=14]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_013.png" type="Texture" id=15]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_014.png" type="Texture" id=16]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_015.png" type="Texture" id=17]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_016.png" type="Texture" id=18]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_017.png" type="Texture" id=19]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_018.png" type="Texture" id=20]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_019.png" type="Texture" id=21]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_020.png" type="Texture" id=22]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_021.png" type="Texture" id=23]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_022.png" type="Texture" id=24]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_023.png" type="Texture" id=25]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_024.png" type="Texture" id=26]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_025.png" type="Texture" id=27]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_026.png" type="Texture" id=28]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_027.png" type="Texture" id=29]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_028.png" type="Texture" id=30]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_029.png" type="Texture" id=31]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_030.png" type="Texture" id=32]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_031.png" type="Texture" id=33]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_032.png" type="Texture" id=34]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_033.png" type="Texture" id=35]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_034.png" type="Texture" id=36]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_035.png" type="Texture" id=37]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_036.png" type="Texture" id=38]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_037.png" type="Texture" id=39]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_038.png" type="Texture" id=40]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_039.png" type="Texture" id=41]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_040.png" type="Texture" id=42]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_041.png" type="Texture" id=43]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_042.png" type="Texture" id=44]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_043.png" type="Texture" id=45]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_044.png" type="Texture" id=46]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_045.png" type="Texture" id=47]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_046.png" type="Texture" id=48]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_047.png" type="Texture" id=49]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_048.png" type="Texture" id=50]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_049.png" type="Texture" id=51]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_050.png" type="Texture" id=52]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_051.png" type="Texture" id=53]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_052.png" type="Texture" id=54]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_053.png" type="Texture" id=55]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_054.png" type="Texture" id=56]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_055.png" type="Texture" id=57]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_056.png" type="Texture" id=58]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_057.png" type="Texture" id=59]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_058.png" type="Texture" id=60]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_059.png" type="Texture" id=61]
[ext_resource path="res://cave/gas_trap/gas_loop/gas_trap_loop_060.png" type="Texture" id=62]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_000.png" type="Texture" id=63]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_001.png" type="Texture" id=64]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_002.png" type="Texture" id=65]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_003.png" type="Texture" id=66]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_004.png" type="Texture" id=67]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_005.png" type="Texture" id=68]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_006.png" type="Texture" id=69]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_007.png" type="Texture" id=70]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_008.png" type="Texture" id=71]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_009.png" type="Texture" id=72]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_010.png" type="Texture" id=73]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_011.png" type="Texture" id=74]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_012.png" type="Texture" id=75]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_013.png" type="Texture" id=76]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_014.png" type="Texture" id=77]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_015.png" type="Texture" id=78]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_016.png" type="Texture" id=79]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_017.png" type="Texture" id=80]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_018.png" type="Texture" id=81]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_019.png" type="Texture" id=82]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_020.png" type="Texture" id=83]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_021.png" type="Texture" id=84]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_022.png" type="Texture" id=85]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_023.png" type="Texture" id=86]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_024.png" type="Texture" id=87]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_025.png" type="Texture" id=88]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_026.png" type="Texture" id=89]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_027.png" type="Texture" id=90]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_028.png" type="Texture" id=91]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_029.png" type="Texture" id=92]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_030.png" type="Texture" id=93]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_031.png" type="Texture" id=94]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_032.png" type="Texture" id=95]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_033.png" type="Texture" id=96]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_034.png" type="Texture" id=97]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_035.png" type="Texture" id=98]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_036.png" type="Texture" id=99]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_037.png" type="Texture" id=100]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_038.png" type="Texture" id=101]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_039.png" type="Texture" id=102]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_040.png" type="Texture" id=103]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_041.png" type="Texture" id=104]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_042.png" type="Texture" id=105]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_043.png" type="Texture" id=106]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_044.png" type="Texture" id=107]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_045.png" type="Texture" id=108]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_046.png" type="Texture" id=109]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_047.png" type="Texture" id=110]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_048.png" type="Texture" id=111]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_049.png" type="Texture" id=112]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_050.png" type="Texture" id=113]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_051.png" type="Texture" id=114]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_052.png" type="Texture" id=115]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_053.png" type="Texture" id=116]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_054.png" type="Texture" id=117]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_055.png" type="Texture" id=118]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_056.png" type="Texture" id=119]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_057.png" type="Texture" id=120]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_058.png" type="Texture" id=121]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_059.png" type="Texture" id=122]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_060.png" type="Texture" id=123]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_061.png" type="Texture" id=124]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_062.png" type="Texture" id=125]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_063.png" type="Texture" id=126]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_064.png" type="Texture" id=127]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_065.png" type="Texture" id=128]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_066.png" type="Texture" id=129]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_067.png" type="Texture" id=130]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_068.png" type="Texture" id=131]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_069.png" type="Texture" id=132]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_070.png" type="Texture" id=133]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_071.png" type="Texture" id=134]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_072.png" type="Texture" id=135]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_073.png" type="Texture" id=136]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_074.png" type="Texture" id=137]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_075.png" type="Texture" id=138]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_076.png" type="Texture" id=139]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_077.png" type="Texture" id=140]
[ext_resource path="res://cave/gas_trap/gas_burst/gas_trap_burst_078.png" type="Texture" id=141]
[ext_resource path="res://hitbox.gd" type="Script" id=142]
[ext_resource path="res://cave/gas_trap/fire.wav" type="AudioStream" id=143]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 137 ), ExtResource( 138 ), ExtResource( 139 ), ExtResource( 140 ), ExtResource( 141 ) ],
"loop": false,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 25, 15 )

[node name="gas" type="Node2D"]

position = Vector2( 2230, 170 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
machine_path = null
continuous = true
interval = 2.5
max_delay = 2.5
forced_delay = 0
enabled = true
quiet = false

[node name="continuous" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 0, -50 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="burst" type="AnimatedSprite" parent="." index="1"]

position = Vector2( 0, -50 )
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="hitbox" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
collision_mask = 6
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 142 )
_sections_unfolded = [ "Collision" ]

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox" index="0"]

shape = SubResource( 3 )

[node name="burst_duration" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.3
one_shot = true
autostart = false

[node name="burst_interval" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.5
one_shot = false
autostart = false

[node name="burst_audio" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 143 )
volume_db = -25.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.7411
bus = "Master"
area_mask = 1

[node name="timer" type="Timer" parent="burst_audio" index="0"]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = false


